[metadata]
description-file=README.md

[tool:pytest]
norecursedirs=dist docs build deploy
testpaths = tests
addopts = --ignore tests/steem/test_proposals.py --ignore tests/steem/test_debug.py

[yapf]
indent_width = 4
column_limit = 77
based_on_style = pep8
spaces_before_comment = 2
split_before_logical_operator = true
dedent_closing_brackets = true
i18n_comment = NOQA
